--- a/dd-java-agent/appsec/appsec.gradle
+++ b/dd-java-agent/appsec/appsec.gradle
@@ -23,7 +23,8 @@ dependencies {
   api deps.slf4j
   implementation project(':internal-api')
   implementation project(':communication')
-  implementation group: 'io.sqreen', name: 'libsqreen', version: '3.0.8'
+//  implementation group: 'io.sqreen', name: 'libsqreen', version: '3.0.8'
+  implementation files('/home/glopes/repos/AgentJavaNative/build/libs/libsqreen-3.0.8.jar')
   implementation group: 'com.squareup.moshi', name: 'moshi', version: versions.moshi
 
   annotationProcessor deps.autoserviceProcessor
